--- a/05-File-Management.Rmd
+++ b/05-File-Management.Rmd
@@ -2,7 +2,7 @@
 
 # File Management
 
-This chapter provides an overview of Vibe's Graphical User Interface (GUI).
+This chapter deals with saving and loading Vibe show files as well as the importing of Compulite Vector show files.
 
 **The following is covered in this chapter:**
 
