--- a/15-Dark-Parameter-Positioning.Rmd
+++ b/15-Dark-Parameter-Positioning.Rmd
@@ -1,6 +1,7 @@
+
 # Dark Parameter Positioning
 
-This chapter provides an overview of Vibe's Graphical User Interface (GUI).
+There are three features that allow you to preset parameter values when a fixture's dimmer is dark, thus avoiding visible parameter movement:
 
 **The following is covered in this chapter:**
 
@@ -11,12 +12,9 @@ This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 
 ## Look Ahead (Move in Dark)
 
-
-15.1. Look Ahead (Move in Dark)
-
 The Look Ahead feature is used for automatic pre-positioning of selected parameters when the fixture's dimmer is dark, thus avoiding visible p r meter movement. For Look Ahead to work, the fixture's dimmer must be at ZR, and there must be a parameter moves from one cue to the next cue. Look Ahead fades can be set for a specified default time or user time, which is different than the cue's default fade time. Before using Look Ahead, you must create a Look Ahead mask. The Look Ahead mask tells Vibe which spots, spot parameters, or scrollers are affected by the Look Ahead feature. If you have not specified parameters in the Look Ahead mask, all parameters will be affected. The Look Ahead mask can contain more than one parameter. Currently, the Look Ahead pre-positioning will happen at the **last** available opportunity before the dimmer turns on.
 
-> <span style="color:Red">If in specific cues you want to prevent applying the Look Ahead mask, give dimmers a value of 1%.</span>.
+> If in specific cues you want to prevent applying the Look Ahead mask, give dimmers a value of 1%.
 
 > <span style="color:Red">LED fixtures without physical dimmer parameters should not be included in the Look Ahead Mask.
 </span>
@@ -56,7 +54,9 @@ The Look Ahead feature is used for automatic pre-positioning of selected paramet
 3.   Press [DELETE].
     
 
-A Look Ahead cue is a cue that automatically pre-positions parameters when the dimmer is off. Currently only time can be set for a Look Ahead cue. **Set individual Look Ahead Time -** Speed at which fixtures move in dark.
+A Look Ahead cue is a cue that automatically pre-positions parameters when the dimmer is off. Currently only time can be set for a Look Ahead cue. 
+
+**Set individual Look Ahead Time -** Speed at which fixtures move in dark.
 
 1.  CUE] [#] [Time] - The Time pop-up will open.
     
@@ -84,11 +84,11 @@ A Look Ahead cue is a cue that automatically pre-positions parameters when the d
 ## Look Ahead Cue (Mark)
 
 
-**Unimplemented**
+ <span style="color:Blue">Unimplemented</span>
 
--   Look Ahead: (sometimes referred to a Mark Cue) 
+-   <span style="color:Gray">Look Ahead: (sometimes referred to a Mark Cue) </span>
 
-    ◾ Unlike having Look Ahead automatically preposition all dark parameters for all cues in a Qlist, a cue tagged in Cue Store **Options** as {Look Ahead} will preposition dark parameters for just the tagged cue.
+    -  <span style="color:Gray">Unlike having Look Ahead automatically preposition all dark parameters for all cues in a Qlist, a cue tagged in Cue Store **Options** as {Look Ahead} will preposition dark parameters for just the tagged cue.</span>
 
 
 
