--- a/17-Snaps.Rmd
+++ b/17-Snaps.Rmd
@@ -1,5 +1,7 @@
+
 # Snaps (Snapshots)
 
+This chapter deals with creating and triggering Snapshots.
 
 **The following is covered in this chapter:**
 
@@ -49,9 +51,9 @@
 
 Or
     
-3. Press [SNAP] [#] [STORE].
+2. Press [SNAP] [#] [STORE].
     
-4.  Press [TEXT] to open the Text Pop-up and label the Snap - this is only valid directly after storing the Snap. Alternately [SNAP] [#] [TEXT] may be used at any time to label the Snap.
+3.  Press [TEXT] to open the Text Pop-up and label the Snap - this is only valid directly after storing the Snap. Alternately [SNAP] [#] [TEXT] may be used at any time to label the Snap.
 
 
 
@@ -72,14 +74,14 @@ Snaps may be directly triggered using the keypad or Snap Softkeys.
 -   Tap the required {SNAP} softkey.
     
 
-**Trigger a Snap from a Qkey: Currently Unimplemented.**
+ <span style="color:Gray">**Trigger a Snap from a Qkey: Currently Unimplemented.**</span> 
 
--   Assign the Snap to the Qkey by pressing [SNAP] [#] [HERE] to any Qkey button.
+-    <span style="color:Gray">Assign the Snap to the Qkey by pressing [SNAP] [#] [HERE] to any Qkey button.</span>
     
--   Press the Qkey button to activate.
+-   <span style="color:Gray">Press the Qkey button to activate. </span>
     
 
-Snaps on Vibe are currently **absolute** - All controllers are replaced with new loaded objects and controllers without new loaded objects are cleared. Future releases will have an option for "Page Holdover" where active objects will not be replaced until the controller is released.
+Snaps on Vibe are currently **absolute** - All controllers are replaced with new loaded objects and controllers without new loaded objects are cleared. <span style="color:Gray">Future releases will have an option for "Page Holdover" where active objects will not be replaced until the controller is released.</span>
 
 Snaps may be assigned a time to "smooth" out their transitions.
 
@@ -110,12 +112,11 @@ Snaps may be assigned a time to "smooth" out their transitions.
 -   Exclude from Override - Even if recorded in a Snap, the controller will ignore Snap activation instructions.
 
 
-
-
 ## Attaching Snaps
 
+Snaps may be attached and triggered from Qlist Cues.
 
-Snaps may be attached and triggered from Qlist Cues Attach a Snap to a Cue.
+**Attach a Snap to a Cue:**
 
 -   [CUE] [#] [SNAP] [#] [STORE]
     
@@ -143,11 +144,13 @@ Snaps may be attached and triggered from Qlist Cues Attach a Snap to a Cue.
 
 **Temporarily disable triggers:**
 
-1.  Tap the controller display header for the Qlist that contains Macro or Snap triggers - The Qlist Properties pop-up will appear. OR
+1.  Tap the controller display header for the Qlist that contains Macro or Snap triggers - The Qlist Properties pop-up will appear. 
+
+OR
     
-2.  [SETTINGS] [HERE] to any controller button and select the Qlist Properties tab.
+1.  [SETTINGS] [HERE] to any controller button and select the Qlist Properties tab.
     
-3.   Deselect the {Trigger} button - Triggering will be disabled for the incident of the Qlist assigned to that specific controller.
+2.   Deselect the {Trigger} button - Triggering will be disabled for the incident of the Qlist assigned to that **specific** controller.
 
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fd35SScD9jx2IIxZBd7cE%2F173..webp?alt=media&token=eaf131f2-2835-4b49-bdfd-7332d407d98f)
