--- a/21-Time-Code.Rmd
+++ b/21-Time-Code.Rmd
@@ -1,8 +1,9 @@
+
 # Time Code
 
 Time code is used to synchronize Vibe events with the internal timeline or external SMPTE linear timecode (LTC) or MIDI timecode.
 
-><span style="color:Red">This feature is under development and this section is preliminary.</span>.
+><span style="color:Red">This feature is under development and this section is preliminary.</span>
 
 
 **The following is covered in this section:**
@@ -22,7 +23,6 @@ Time code is used to synchronize Vibe events with the internal timeline or exter
 -   [21.7. Time Format](https://vibemanual.compulite.com/time-code.html#time-format)
 
 ## Timecode and Timeline basics
-
 
 
 Vibe uses a philosophy of Timeline Tracks. There is no practice limit to the number of Timeline Tracks that may be recorded in a show but graphic performance may suffer with more than 16 Timeline Tracks. Each timeline may have its own timecode source.
@@ -65,7 +65,7 @@ When starting a new show any Timeline views stored in Layouts will be empty and 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FnGLpgXe9CBaHIDAeyvZq%2Fimage.png?alt=media&token=86dd2f10-6d2a-4905-bfeb-baec212c85db)
 
 
-**Timeline view with two timeline tracks, the cursor, and a marker**
+ <p align=center> Timeline view with two timeline tracks, the cursor, and a marker</p>
 
 **To add a Timeline view to a page:**
 
@@ -77,32 +77,35 @@ When starting a new show any Timeline views stored in Layouts will be empty and 
     
 4.  Tap the Lock/Unlock icon to enable adding a new view.
     
-5.  On the screen with the blank workspace, open the {Vibe} menu again and select} ⟶ {Display Objects} ⟶  {Timeline View} - A blank timeline view will appear on the workspace.
+5.  On the screen with the blank workspace, open the {Vibe} menu again and select} 
+
+	⟶ {Display Objects} 
+	⟶  {Timeline View} - A blank timeline view will appear on the workspace.
     
 6.  Size and drag the Timeline view as required then tap {unlock/lock} icon to lock the Topo from further adjustment - The Timeline view is now ready to add tracks to.
 
 
 ## Configuring Timecode
 
-Timecode connectors for the following:
+**Vibe has Timecode connectors for the following:**
 
 -   Audio input Combi Jack with: 
 
-    ◾ Female unbalanced line level input on 1/4" Phone jack 
+    - Female unbalanced line level input on 1/4" Phone jack 
 
-    ◾ Female 3 pin XLR balanced line level input.
+    - Female 3 pin XLR balanced line level input.
     
 -   5 Pin DIN connector for MIDI and MIDI timecode input.
     
 
-Additionally, the following general purpose ports may be used for Timecode:
+**Additionally, the following general purpose ports may be used for Timecode:**
 
 -   USB 2 and USB 3 ports can be used for USB class compliant MIDI over USB.
     
 -   Compulite devices that support MIDI over Ethernet can also be used.
     
 
-Recommended quality and level for SMPTE:
+**Recommended quality and level for SMPTE:**
 
 -   SMPTE is very sensitive to distortion and also requires adequate gain. A clean audio signal with a gain ranging between 0db to +5db is recommended.
     
@@ -111,7 +114,7 @@ Recommended quality and level for SMPTE:
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FvlG4GstkXKltPKieBniE%2F21.3.webp?alt=media&token=4d637f49-7313-454e-8b8e-9214d8d1b707)
 
-**1/O Settings Pop-up in Timecode Tab**
+ <p align=center> 1/O Settings Pop-up in Timecode Tab</p>
 
 **Enable Timecode:**
 
@@ -119,9 +122,9 @@ Recommended quality and level for SMPTE:
     
 2.  For Tap {General} tab and select: 
    
-    ◾ {Local MIDI} to enable the DIN connector MIDI. 
+    - {Local MIDI} to enable the DIN connector MIDI. 
   
-    ◾ {External MIDI} to enable USB MIDI or MIDI over Ethernet.
+    - {External MIDI} to enable USB MIDI or MIDI over Ethernet.
     
 3.  Tap the {Timecode} tab, the Timecode pop-up will appear.
     
@@ -129,7 +132,7 @@ Recommended quality and level for SMPTE:
     
 5.  Enable {SMPTE In} to receive LTC audio timecode. (Frames are automatically matched to the incoming frame rate}
     
-6.   Currently, Vibe is only capable of being a timecode Slave but will be able to be the MIDI timecode Master in future releases.
+6.  <span style="color:Gray">Currently, Vibe is only capable of being a timecode Slave but will be able to be the MIDI timecode Master in future releases.</span>
 
 
 ## Recording Timeline Tracks
@@ -150,19 +153,19 @@ After a Timeline View has been created, timeline tracks may be recorded. Current
     
 5.  Tap the {Select Clock} drop down in the top left corner and select the timecode source. 
 
-    ◾ Virtual Local - Use internal timecode clock. 
+    - Virtual Local - Use internal timecode clock. 
 
-    ◾ Physical Local - Use the SMPTE or MTC timecode inputs on the console. 
+    - Physical Local - Use the SMPTE or MTC timecode inputs on the console. 
 
-    ◾ Additional options will populate the list depending on the interfaced timecode device.
+    - Additional options will populate the list depending on the interfaced timecode device.
     
 6.  Enable the red {Record} button or the {+ Record} button.
     
     ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fl4fNaYR34NAoNMJxt3HL%2F21.4.1.webp?alt=media&token=fb24e6fe-6798-432f-a7d7-b454cf666b76)
     
-    ◾ Record overwrites existing events. 
+    - Record overwrites existing events. 
     
-    ◾ + Record adds events to existing events.
+    - (+) Record adds events to existing events.
     
 7. If using internal TC, press Play.
     
@@ -181,7 +184,7 @@ To trigger Timeline commands via the panel and Editor Toolbar there is an "Activ
 
 **Grid View Filters**
 
-In the grid view of the Timeline**,** it is now possible to see all events from all timelines (as before) and in addition to filter events by Timeline and see only its own events.
+In the grid view of the Timeline,  it is now possible to see all events from all timelines (as before) and in addition to filter events by Timeline and see only its own events.
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F1GcF6cL317OyaygZLFZV%2Fimage.png?alt=media&token=7b352b8c-dfaf-402d-a9fc-5e986b395212)
 
@@ -190,7 +193,7 @@ In the grid view of the Timeline**,** it is now possible to see all events from 
 ## Executing and Editing Events
 
 
-To Execute timeline events:
+**To Execute timeline events:**
 
 -   If the source is external MIDI or SMPTE timecode, press [Play] on the timecode source. The events will synchronize to the source timecode.
     
@@ -296,7 +299,7 @@ These commands will affect the selected timelines in the sequence. Some sequence
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FzgT27J7izwv0ermWLplh%2Fimage.png?alt=media&token=8ebdbcb1-4cfc-4f5d-a4db-a219ef3f88d3)
 
 
-4. Sequence may also end with:
+4. **Sequence may also end with:**
 
 	 **a.** Store – will create the timelines if they are not already created
 
@@ -306,7 +309,7 @@ These commands will affect the selected timelines in the sequence. Some sequence
 
 	 **d.** Copy – will add the timelines to the clipboard 
 	 
-	 **e.**Paste – 		 	will paste the copied timelines from the clipboard
+	 **e.** Paste – 		 	will paste the copied timelines from the clipboard
 	
 
 ## Markers
